Add notebooks for graph sampling.
This will give us a good reference point.

--- a/examples/notebooks/toy_data.ipynb
+++ b/examples/notebooks/toy_data.ipynb
@@ -41,6 +41,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([3, 2])"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "edge_index.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 82,
    "metadata": {},
    "outputs": [],
@@ -50,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +81,7 @@
        "        [ 1,  1]])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
